Divisão da Solução em Módulos e Criação da nova Migration

--- a/ProAgil-App/src/app/app.component.html
+++ b/ProAgil-App/src/app/app.component.html
@@ -3,7 +3,7 @@
 
 <div class=" container">
   <h1>
-    Gabriel Santos {{ title }}!
+    Gabriel Santos {{ title }}
   </h1> 
   <app-eventos></app-eventos>
 </div>
